cspm/cspm-platform/services/inventory-collector/output/588989875114/eu-north-1/ec2_23/describe_security_groups/describe_security_groups_output_20250603_143919.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-cddf54a4",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-898575e0",
      "SecurityGroupArn": "arn:aws:ec2:eu-north-1:588989875114:security-group/sg-cddf54a4",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-cddf54a4"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "13552170-2830-4ec7-9f30-a3de5f6533c2",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "13552170-2830-4ec7-9f30-a3de5f6533c2",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "925",
      "date": "Tue, 03 Jun 2025 14:39:32 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
